--- a/app/src/main/res/layout/list_sub_module_item.xml
+++ b/app/src/main/res/layout/list_sub_module_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
     android:layout_marginStart="8dp"
     android:padding="8dp">
 
@@ -11,14 +11,34 @@
         android:id="@+id/civ_subModuleItem_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:scaleType="centerCrop" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
+        app:civ_border_color="@color/colorAccent"
+        app:civ_border_width="2dp"
+        app:civ_border_overlay="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_subModuleItem_name"
-        android:fontFamily="@font/open_sans_extrabold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textSize="16sp" />
-
-</LinearLayout>
+        android:fontFamily="@font/open_sans_semibold"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        android:background="@drawable/rounded_corner_accent"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        app:layout_constraintBottom_toBottomOf="@+id/civ_subModuleItem_image"
+        app:layout_constraintEnd_toEndOf="@+id/civ_subModuleItem_image"
+        app:layout_constraintStart_toStartOf="@+id/civ_subModuleItem_image"
+        app:layout_constraintTop_toBottomOf="@+id/civ_subModuleItem_image"
+        tools:text="subItem" />
+</androidx.constraintlayout.widget.ConstraintLayout>
