--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBackground">#FFF</color>
     <color name="colorLightBlue">#8E9B9C</color>
     <color name="colorBackgroundTransparent">#CCFFFFFF</color>
+    <color name="shimmer_light_gray">#CFCFCF</color>
 </resources>
