--- a/app/src/main/res/layout/list_data_forum.xml
+++ b/app/src/main/res/layout/list_data_forum.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -21,14 +22,23 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="14dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:fontFamily="@font/open_sans_semibold"
         android:maxLines="5"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/toolbar_menu"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Topik diskusi" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_forumTopik"/>
 
     <TextView
         android:id="@+id/tv_forumDate"
@@ -38,7 +48,8 @@
         android:fontFamily="@font/open_sans"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_forumUsername"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="12/12/19"/>
 
     <TextView
         android:id="@+id/tv_forumUsername"
@@ -51,7 +62,8 @@
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/civ_user"
         app:layout_constraintEnd_toStartOf="@+id/civ_user"
-        app:layout_constraintTop_toTopOf="@+id/civ_user" />
+        app:layout_constraintTop_toTopOf="@+id/civ_user"
+        tools:text="Azhura"/>
 
     <View
         android:id="@+id/view"
